fixed layout problems

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -53,6 +53,18 @@ li {
   size: 1rem;
 }
 
+.fa-solid {
+  font-size: 1.45rem;
+}
+
+.fa-solid:hover {
+  color: #3ab1c8;
+}
+
+.container h1 {
+  font-size: 2.5rem;
+}
+
 section .container {
   overflow: hidden;
 }
@@ -102,6 +114,7 @@ body {
   border-left: 1px solid rgba(153, 153, 153, 0.6901960784);
   border-top: 1px solid rgba(153, 153, 153, 0.6901960784);
   border-right: 1px solid rgba(153, 153, 153, 0.6901960784);
+  border-bottom: 1px solid rgba(153, 153, 153, 0.6901960784);
 }
 
 li {
@@ -116,16 +129,33 @@ li {
   border-bottom: 1px solid rgba(153, 153, 153, 0.6901960784);
 }
 
+.result {
+  border-top: 1px solid rgba(153, 153, 153, 0.6901960784);
+}
+
 input[type=checkbox]:checked {
   border-color: #3ab1c8;
 }
 
 .container {
-  box-shadow: rgba(0, 0, 0, 0.45) 0px 10px 20px -20px;
+  box-shadow: rgba(0, 0, 0, 0.45) 0px 18px 20px -20px;
 }
 
 .filter-container {
-  box-shadow: rgba(0, 0, 0, 0.45) 0px 15px 20px -20px;
+  box-shadow: rgba(0, 0, 0, 0.45) 0px 20px 20px -20px;
+  border-left: 1px solid rgba(153, 153, 153, 0.6901960784);
+  border-right: 1px solid rgba(153, 153, 153, 0.6901960784);
+  border-bottom: 1px solid rgba(153, 153, 153, 0.6901960784);
+  border-top: 1px solid rgba(153, 153, 153, 0.6901960784);
+  border-radius: 3px;
+}
+
+.container h1 {
+  color: #3ab1c8;
+}
+
+.userInput {
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
 }
 
 .submitBtn {
@@ -168,9 +198,8 @@ section .container {
   width: 100%;
   margin-bottom: 1.5em;
 }
-
-.todo-container {
-  margin-top: 1em;
+section .container h1 {
+  margin-bottom: 0.4em;
 }
 
 .counter-container {
@@ -200,10 +229,11 @@ li label {
 li .editInput {
   margin-left: 0.7em;
   width: 85%;
-  padding: 0.8em 0.5em 0.8em 0.5em;
+  padding: 0.7em 0.5em 0.7em 0.5em;
 }
 li button {
   margin-left: auto;
+  margin-left: 0.8em;
 }
 
 .filter-container {
@@ -243,8 +273,6 @@ ul li button {
 
 .userInput:focus {
   outline: none;
-  border: 3px solid red;
-  border-right: 3px solid red;
 }
 
 .editInput:focus {
@@ -290,5 +318,6 @@ input[type=checkbox]:checked::before {
   }
   .filter-container {
     box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 0px 0px;
+    border: none;
   }
 }
