--- a/SCSS/_layout.scss
+++ b/SCSS/_layout.scss
@@ -10,11 +10,15 @@ section {
     // padding: 2em 1em 0em 1em;
     width: 100%;
     margin-bottom: 1.5em;
+
+    h1 {
+      margin-bottom: 0.4em;
+    }
   }
 }
 
 .todo-container {
-  margin-top: 1em;
+  // margin-bottom: 1.5em;
 }
 
 .counter-container {
@@ -64,11 +68,13 @@ li {
     margin-left: 0.7em;
     // height: 110%;
     width: 85%;
-    padding: 0.8em 0.5em 0.8em 0.5em;
+    padding: 0.7em 0.5em 0.7em 0.5em;
   }
 
   button {
     margin-left: auto;
+    // min-width: 0.5em;
+    margin-left: 0.8em;
   }
 }
 
@@ -100,4 +106,9 @@ ul {
       font-size: 1.3rem;
     }
   }
+}
+
+
+.userInput {
+  // margin-bottom: 1em;
 }
