--- a/SCSS/_responsive.scss
+++ b/SCSS/_responsive.scss
@@ -1,10 +1,20 @@
 @media only screen and (min-width: 600px) {
-    .container {
-        box-shadow: rgba(0, 0, 0, 0.45) 0px 18px 20px -20px;
-      }
-      
-      .filter-container {
-        box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 0px 0px;
-        // background-color: red;
-      }
+  .container {
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 18px 20px -20px;
+  }
+
+  .filter-container {
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 0px 0px;
+    // background-color: red;
+    border: none;
+  }
 }
+
+// @media only screen and (max-width: 520px) {
+//   li {
+//     .editInput {
+//       width: 75%;
+//     }
+//   }
+  
+// }
