--- a/SCSS/_typography.scss
+++ b/SCSS/_typography.scss
@@ -36,3 +36,18 @@ li {
 .submitBtn {
   size: 1rem;
 }
+
+.fa-solid {
+  font-size: 1.45rem;
+}
+
+.fa-solid:hover {
+  color: #3ab1c8;
+}
+
+
+.container {
+  h1 {
+    font-size: 2.5rem;
+  }
+}
